--- a/package.json
+++ b/package.json
@@ -5,5 +5,15 @@
     "express-validator": "^6.14.2",
     "mongo": "^0.1.0",
     "mongoose": "^6.7.2"
-  }
+  },
+  "name": "asn4-mongo-akshat",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Akshat",
+  "license": "ISC",
+  "description": ""
 }
